Harden unit test generation with JaCoCo run_command checks